--- a/src/app/places/discover/discover.page.html
+++ b/src/app/places/discover/discover.page.html
@@ -7,9 +7,9 @@
 <ion-content padding>
   <ion-grid>
     <ion-row>
-      <ion-col size="12"  size-sm="8" offset-sm="2" text-center>
-        <ion-card>
-          <ion-card-header>
+      <ion-col size="12"  size-sm="8" offset-sm="2" class="ion-text-center">
+        <ion-card >
+          <ion-card-header >
             <ion-card-title> {{ loadedPlaces[0].title }} </ion-card-title>
             <ion-card-subtitle> {{ loadedPlaces[0].price | currency }} / Night </ion-card-subtitle>
           </ion-card-header>
@@ -17,13 +17,32 @@
           <ion-card-content>
             <p> {{ loadedPlaces[0].description }} </p>
           </ion-card-content>
+          <div >
+            <ion-button 
+            fill="clear" 
+            color="primary" 
+            [routerLink]="[
+            '/', 
+            'places', 
+            'tabs', 
+            'discover', 
+            'loadedPlaces[0].id'
+            ]"
+            >
+            More
+          </ion-button>
+          </div>
         </ion-card>
       </ion-col>
     </ion-row>
     <ion-row>
       <ion-col size="12"  size-sm="8" offset-sm="2" text-center>
         <ion-list>
-          <ion-item *ngFor="let place of loadedPlaces.slice(1)">
+          <ion-item 
+          *ngFor="let place of loadedPlaces.slice(1)" 
+          [routerLink]="['/', 'places', 'tabs', 'discover', place.id]"
+          detail
+          >
             <ion-thumbnail slot="start">
               <ion-img [src]="place.imageUrl"></ion-img>
             </ion-thumbnail>
