--- a/src/app/places/discover/discover.page.html
+++ b/src/app/places/discover/discover.page.html
@@ -1,9 +1,15 @@
 <ion-header>
   <ion-toolbar>
+    <ion-buttons slot="start">
+       <ion-menu-button></ion-menu-button>
+       <!-- <ion-button (click)="onOpenMenu()">
+         Open
+       </ion-button> -->
+    </ion-buttons>
     <ion-title>Discover Places</ion-title>
   </ion-toolbar>
 </ion-header>
-
+ 
 <ion-content padding>
   <ion-grid>
     <ion-row>
