--- a/src/app/places/offers/offer-bookings/offer-bookings.page.html
+++ b/src/app/places/offers/offer-bookings/offer-bookings.page.html
@@ -3,16 +3,15 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/places/tabs/offers"></ion-back-button>
     </ion-buttons>
-    <ion-title> {{ place.title }} </ion-title>
+    <ion-title>{{ place.title }}</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content padding>
-  <ion-button 
-    color="primary" 
-    class="ion-margin" 
-    [routerLink]="['/', 'places', 'tabs', 'offers','edit' , place.id]"
-    >Edit
-  </ion-button>
-
+  <ion-button
+    margin
+    color="primary"
+    [routerLink]="['/', 'places', 'tabs', 'offers', 'edit', place.id]"
+    >Edit</ion-button
+  >
 </ion-content>
