--- a/src/app/places/offers/offers.page.html
+++ b/src/app/places/offers/offers.page.html
@@ -1,12 +1,12 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-menu-button menu="m1"></ion-menu-button>
+      <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <ion-title>My Offers</ion-title>
     <ion-buttons slot="primary">
       <ion-button routerLink="/places/tabs/offers/new">
-        <ion-icon name="add-outline" slot="icon-only"></ion-icon>
+        <ion-icon name="add" slot="icon-only"></ion-icon>
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
@@ -15,19 +15,17 @@
 <ion-content padding>
   <ion-grid>
     <ion-row>
-      <ion-col size="12"  size-sm="8" offset-sm="2" text-center>
+      <ion-col size="12" size-sm="8" offset-sm="2">
         <ion-list>
-          <ion-item 
-          *ngFor="let place of loadedPlaces" 
-          [routerLink]="['/', 'places', 'tabs', 'offers', place.id]"
-          detail
-          > 
+          <ion-item
+            *ngFor="let offer of offers"
+            [routerLink]="['/', 'places', 'tabs', 'offers', offer.id]"
+          >
             <ion-thumbnail slot="start">
-              <ion-img [src]="place.imageUrl"></ion-img>
+              <ion-img [src]="offer.imageUrl"></ion-img>
             </ion-thumbnail>
             <ion-label>
-              <h2> {{ place.title }} </h2>
-              <p> {{ place.description }} </p>
+              <h1>{{ offer.title }}</h1>
             </ion-label>
           </ion-item>
         </ion-list>
