--- a/src/app/places/offers/offers.page.html
+++ b/src/app/places/offers/offers.page.html
@@ -12,23 +12,13 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="ion-padding">
+<ion-content>
   <ion-grid>
     <ion-row>
       <ion-col size="12" size-sm="8" offset-sm="2">
         <ion-list>
           <ion-item-sliding *ngFor="let offer of offers">
-            <ion-item
-              
-              [routerLink]="['/', 'places', 'tabs', 'offers', offer.id]"
-            >
-              <ion-thumbnail slot="start">
-                <ion-img [src]="offer.imageUrl"></ion-img>
-              </ion-thumbnail>
-              <ion-label>
-                <h1>{{ offer.title }}</h1>
-              </ion-label>
-            </ion-item>
+            <app-offer-item [offer]="offer"></app-offer-item>
             <ion-item-options>
               <ion-item-option color="secondary" [routerLink]="['/', 'places', 'tabs', 'offers', 'edit',offer.id]">
                 
