--- a/src/app/auth/auth.page.html
+++ b/src/app/auth/auth.page.html
@@ -1,20 +1,70 @@
 <ion-header>
   <ion-toolbar >  
-    <ion-title>Authenticate</ion-title>
+    <ion-title>{{ isLogin ? 'Login' : 'Signup' }} </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="ion-padding">
- <ion-list>
-  <ion-item >
-    <ion-label position="floating">E-Mail</ion-label>
-    <ion-input></ion-input>
-  </ion-item>
- </ion-list>
+<ion-content >
+  <form #f="ngForm" (ngSubmit)="onSubmit(f)">
+    <ion-grid>
+      <ion-row>
+        <ion-col size-sm="6" offset-sm="3">
+          <ion-list>
+            <ion-item >
+              <ion-label position="floating">E-Mail</ion-label>
+              <ion-input 
+                type="email" 
+                ngModel 
+                name="email" 
+                required 
+                email
+                #emailCtrl="ngModel"
+              ></ion-input> 
+            </ion-item>
+            <ion-item *ngIf="!emailCtrl.valid && emailCtrl.touched" lines="none">
+              <ion-label >Should be a valid email Address.</ion-label>
+            </ion-item>
+            <ion-item>
+              <ion-label position="floating"> Password</ion-label>
+              <ion-input 
+                type="password" 
+                ngModel 
+                name="password" 
+                required 
+                minlength="6"
+                #passwordCtrl="ngModel"
+                ></ion-input>
+            </ion-item>
+            <ion-item *ngIf="!passwordCtrl.valid && passwordCtrl.touched" lines="none">
+              <ion-label >Should be at least 6 characters long.</ion-label>
+            </ion-item>
+          </ion-list>
+        </ion-col> 
+      </ion-row>
+      <ion-row>
+        <ion-col size-sm="6" offset-sm="3">
+          <ion-button 
+            type="button" 
+            color="primary" 
+            fill="clear" 
+            expand="block"
+            (click)="onSwitchAuthMode()"
+          >SWITCH TO {{ isLogin ? 'SIGNUP' : 'LOGIN' }}</ion-button>
+          <ion-button 
+            type="submit" 
+            color="primary" 
+            (click)="onLogin()" 
+            expand="block" 
+            [disabled]="!f.valid"
+          >LOGIN
+          </ion-button>
+        </ion-col>
+      </ion-row>
+    </ion-grid>  
+  </form>
+</ion-content>
+
 <!-- <div class="ion-text-center">
   <ion-spinner  color="primary" *ngIf="isLoading"></ion-spinner>
 </div> -->
-<ion-button color="primary" (click)="onLogin()">
-  Login
-</ion-button>
-</ion-content>
+
